Module 6: Fault Tolerance in Microservices Environment